Fixed: Header adaptation Add: Footer adaptation In general adaptation done. P.S. Social Media on Iphone SE looks bad as 4me. Mb in future will rework them on phone displays.

--- a/src/basic-adaptation.css
+++ b/src/basic-adaptation.css
@@ -13,11 +13,35 @@
   }
 }
 /* Footer adapt. */
-@media screen and (max-width: 795px) {
-  .footer {
-    width: 50%;
+@media screen and (max-width: 544px) {
+  footer ul li a {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    border: 2px solid rgb(0, 0, 0);
   }
-  .footer__social {
+  footer ul li a .icon {
     width: 70%;
+    height: 70%;
+  }
+
+  .footer__picture {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 425px) {
+  footer ul li a {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border: 1.5px solid rgb(0, 0, 0);
+  }
+  footer ul li a .icon {
+    width: 50%;
+    height: 50%;
+  }
+
+  .footer__picture {
+    width: 250px;
   }
 }
