--- a/src/basic.css
+++ b/src/basic.css
@@ -102,15 +102,9 @@ footer {
   text-align: center;
 }
 
-footer a {
-  margin-left: var(--space-xl);
-}
-
 .footer__social {
-  width: 100%;
-  display: flex;
+  display: inline-flex;
   padding-top: var(--space-xxxxs);
-  margin: 0 auto;
 }
 
 .footer__picture {
@@ -196,16 +190,19 @@ footer ul li:nth-child(4) a:before {
   margin: var(--space-sm);
 }
 
+.burger {
+  display: flex;
+}
 /*background: var(--color-generic-blue-light);*/
 label .menu {
-  position: absolute;
-  right: -100px;
-  top: -100px;
+  justify-self: flex-end;
   z-index: 100;
-  width: 200px;
-  height: 200px;
+  width: 75px;
+  height: 75px;
   background: var(--color-generic-yellow-light);
-  border-radius: 50% 50% 50% 50%;
+  border-radius: 0 0 0 100%;
+  -moz-border-radius: 0 0 0 100%;
+  -webkit-border-radius: 0 0 0 100%;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
   box-shadow: 0 0 0 0 var(--color-generic-blue-light),
@@ -214,13 +211,14 @@ label .menu {
 }
 
 label .hamburger {
-  position: absolute;
-  top: 135px;
-  left: 50px;
+  position: relative;
+
   width: 30px;
   height: 2px;
+  margin-top: 30px;
+  margin-left: 30px;
   background: var(--color-generic-blue-light);
-  display: block;
+  display: flex;
   -webkit-transform-origin: center;
   transform-origin: center;
   -webkit-transition: 0.5s ease-in-out;
